[gd_scene load_steps=52 format=3 uid="uid://dw10hdrxc240r"]

[ext_resource type="PackedScene" uid="uid://ds7kbryegu2ya" path="res://Entitys/Player.tscn" id="1_av3uj"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_w43al"]
[ext_resource type="AudioStream" uid="uid://jgjogdtrkge" path="res://Audio/SFX/FrogCoinSFX.wav" id="2_7qyxa"]
[ext_resource type="Script" path="res://Scripts/LizardSpawner.gd" id="2_8i3ic"]
[ext_resource type="Shader" path="res://Resources/Flash.gdshader" id="3_b3r5s"]
[ext_resource type="AudioStream" uid="uid://b2y2psfk7qyxt" path="res://Audio/SFX/FlyeatSFX.wav" id="3_eqic8"]
[ext_resource type="PackedScene" uid="uid://b4xxbe3wa8glk" path="res://Entitys/Lizard.tscn" id="3_wp4ck"]
[ext_resource type="AudioStream" uid="uid://cxnuv6rd522d1" path="res://Audio/Music/Amber Forest.mp3" id="4_dnouy"]
[ext_resource type="Script" path="res://Scripts/Destroy.gd" id="4_onl5e"]
[ext_resource type="Script" path="res://Scripts/FlySpawner.gd" id="6_s1keg"]
[ext_resource type="Texture2D" uid="uid://04uve7a6jbes" path="res://Sprites/ForestFloor.png" id="6_tt6a5"]
[ext_resource type="Texture2D" uid="uid://cbsvep1n05a5j" path="res://Sprites/ForestPlatform.png" id="7_pykh5"]
[ext_resource type="PackedScene" uid="uid://cdvp37mjxofqi" path="res://Entitys/Fly.tscn" id="7_scefs"]
[ext_resource type="Script" path="res://Scripts/FireFlySpawner.gd" id="8_80wla"]
[ext_resource type="Texture2D" uid="uid://bbkiyhvtxuaqe" path="res://Sprites/ForestBackground.png" id="9_ffy3i"]
[ext_resource type="PackedScene" uid="uid://bacfcmpoangvs" path="res://Entitys/FireFly.tscn" id="9_i0k7w"]
[ext_resource type="Script" path="res://Scripts/BirdSpawner.gd" id="10_hknvp"]
[ext_resource type="PackedScene" uid="uid://cr1nwy84mkucq" path="res://Entitys/Bird.tscn" id="11_344x6"]
[ext_resource type="Script" path="res://Scripts/RacoonSpawner.gd" id="12_thxep"]
[ext_resource type="PackedScene" uid="uid://7cvsxds2u8h0" path="res://Entitys/Raccoon.tscn" id="13_yfgj2"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="14_d4ex4"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="21_7vces"]
[ext_resource type="FontFile" uid="uid://des2o50dn2jiv" path="res://Resources/StandardFont.ttf" id="22_hl8m5"]
[ext_resource type="Texture2D" uid="uid://dvqirgv7edcbl" path="res://Sprites/NormalHandle.png" id="24_mja3x"]
[ext_resource type="Texture2D" uid="uid://chc12ee5lwist" path="res://Sprites/HighlightedHandle.png" id="25_pf6ng"]
[ext_resource type="Texture2D" uid="uid://dta712k6d87h2" path="res://Sprites/DisabledHandle.png" id="26_0up7d"]
[ext_resource type="StyleBox" uid="uid://b5f0njtko6qey" path="res://Resources/Slider.tres" id="27_wo0cx"]
[ext_resource type="StyleBox" uid="uid://8g2ena73biih" path="res://Resources/GrbberSlider.tres" id="28_c726p"]
[ext_resource type="Texture2D" uid="uid://ibcjbfi121fm" path="res://Sprites/NineRect.png" id="29_22odk"]
[ext_resource type="StyleBox" uid="uid://dvnstsfb450js" path="res://Resources/ButtonDisabled.tres" id="30_utosb"]
[ext_resource type="StyleBox" uid="uid://d3fcxkj3bfaco" path="res://Resources/ButtonHover.tres" id="31_63k1t"]
[ext_resource type="StyleBox" uid="uid://dkhsotgxrhmk2" path="res://Resources/ButtonPressed.tres" id="32_oedmx"]
[ext_resource type="StyleBox" uid="uid://mmpkci82gc4v" path="res://Resources/ButtonNormal.tres" id="33_8fugs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7tyn3"]
resource_local_to_scene = true
shader = ExtResource("3_b3r5s")
shader_parameter/flash_color = null
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ged3g"]
size = Vector2(1536, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlsv1"]
size = Vector2(32, 2104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojkxf"]
size = Vector2(1536, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kaw8j"]
size = Vector2(1536, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03r6b"]
size = Vector2(64, 576)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2fi2"]
size = Vector2(1664, 130)

[sub_resource type="LabelSettings" id="LabelSettings_4vggm"]
font = ExtResource("22_hl8m5")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_jx4ok"]
font = ExtResource("22_hl8m5")

[sub_resource type="LabelSettings" id="LabelSettings_43og0"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_exlt3"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_7uybl"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_a01g6"]
font = ExtResource("22_hl8m5")

[sub_resource type="LabelSettings" id="LabelSettings_hynll"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_sl3lo"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_r284u"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_eorwb"]
font = ExtResource("22_hl8m5")
font_size = 4

[sub_resource type="Environment" id="Environment_5bx81"]
background_mode = 3
tonemap_mode = 2
glow_normalized = true
glow_bloom = 1.0
adjustment_enabled = true
adjustment_contrast = 1.1
adjustment_saturation = 1.1

[node name="GameScene" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_w43al")

[node name="FrogCoinSFX" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("2_7qyxa")
bus = &"SFX"

[node name="FlyeatSFX" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("3_eqic8")
volume_db = 10.0
bus = &"SFX"

[node name="AmberForestMusic" type="AudioStreamPlayer2D" parent="GameManager"]
process_mode = 3
stream = ExtResource("4_dnouy")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="Player" parent="." instance=ExtResource("1_av3uj")]
material = SubResource("ShaderMaterial_7tyn3")
collision_mask = 33

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -176)

[node name="Stage" type="Node2D" parent="."]

[node name="Bottom" type="StaticBody2D" parent="Stage"]
collision_layer = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Bottom"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_ged3g")

[node name="Polygon2D" type="Polygon2D" parent="Stage/Bottom"]
visible = false
color = Color(0.353353, 0.352676, 9.62615e-08, 1)
polygon = PackedVector2Array(-768, 0, -768, 128, 768, 128, 768, 0)

[node name="ForestFloor" type="Sprite2D" parent="Stage/Bottom"]
position = Vector2(2, 48)
texture = ExtResource("6_tt6a5")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 96)

[node name="Wall" type="StaticBody2D" parent="Stage"]
position = Vector2(-480, -192)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Wall"]
position = Vector2(-16, -544)
shape = SubResource("RectangleShape2D_vlsv1")

[node name="Wall2" type="StaticBody2D" parent="Stage"]
position = Vector2(512, -192)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Wall2"]
position = Vector2(-16, -420)
shape = SubResource("RectangleShape2D_vlsv1")

[node name="Dropthru" type="StaticBody2D" parent="Stage"]
position = Vector2(0, -128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Dropthru"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_ojkxf")
one_way_collision = true

[node name="Polygon2D" type="Polygon2D" parent="Stage/Dropthru"]
visible = false
color = Color(0.352941, 0.352941, 0, 1)
polygon = PackedVector2Array(-480, 0, -480, 24, 480, 24, 480, 0)

[node name="ForestPlatform" type="Sprite2D" parent="Stage/Dropthru"]
position = Vector2(0, 13)
texture = ExtResource("7_pykh5")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 26)

[node name="Dropthru2" type="StaticBody2D" parent="Stage"]
position = Vector2(0, -280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Dropthru2"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_kaw8j")
one_way_collision = true

[node name="Polygon2D" type="Polygon2D" parent="Stage/Dropthru2"]
visible = false
color = Color(0.352941, 0.352941, 0, 1)
polygon = PackedVector2Array(-480, 0, -480, 24, 480, 24, 480, 0)

[node name="ForestPlatform" type="Sprite2D" parent="Stage/Dropthru2"]
position = Vector2(0, 13)
texture = ExtResource("7_pykh5")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 26)

[node name="Destroyer" type="Area2D" parent="Stage"]
position = Vector2(768, -192)
collision_layer = 0
collision_mask = 64
script = ExtResource("4_onl5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Destroyer"]
position = Vector2(32, -96)
shape = SubResource("RectangleShape2D_03r6b")

[node name="Destroyer2" type="Area2D" parent="Stage"]
position = Vector2(-832, -192)
collision_layer = 0
collision_mask = 64
script = ExtResource("4_onl5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Destroyer2"]
position = Vector2(32, -96)
shape = SubResource("RectangleShape2D_03r6b")

[node name="Destroyer3" type="Area2D" parent="Stage"]
position = Vector2(-32, -960)
collision_layer = 0
collision_mask = 64
script = ExtResource("4_onl5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Destroyer3"]
position = Vector2(32, 192)
shape = SubResource("RectangleShape2D_w2fi2")

[node name="ForestBackground" type="Sprite2D" parent="Stage"]
modulate = Color(0.458405, 0.458405, 0.458405, 1)
z_index = -8
position = Vector2(0, -216)
texture = ExtResource("9_ffy3i")

[node name="Spawners" type="Node2D" parent="."]

[node name="LizardSpawner" type="Node2D" parent="Spawners"]
position = Vector2(0, -192)
script = ExtResource("2_8i3ic")
lizardEntity = ExtResource("3_wp4ck")

[node name="Spawn" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(-640, 160)

[node name="Spawn2" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(640, 160)

[node name="Spawn3" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(640, 32)

[node name="Spawn4" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(-640, 32)

[node name="Spawn5" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(-640, -120)

[node name="Spawn6" type="Marker2D" parent="Spawners/LizardSpawner"]
position = Vector2(640, -120)

[node name="FlySpawner" type="Node2D" parent="Spawners"]
position = Vector2(0, -192)
script = ExtResource("6_s1keg")
flyEntity = ExtResource("7_scefs")

[node name="Spawn" type="Marker2D" parent="Spawners/FlySpawner"]
position = Vector2(-576, -32)

[node name="Spawn2" type="Marker2D" parent="Spawners/FlySpawner"]
position = Vector2(-576, -160)

[node name="Spawn3" type="Marker2D" parent="Spawners/FlySpawner"]
position = Vector2(576, -160)

[node name="Spawn4" type="Marker2D" parent="Spawners/FlySpawner"]
position = Vector2(576, -32)

[node name="FireFlySpawner" type="Node2D" parent="Spawners"]
position = Vector2(0, -144)
script = ExtResource("8_80wla")
fireflyEntity = ExtResource("9_i0k7w")
spawnTime = 2.0

[node name="Spawn" type="Marker2D" parent="Spawners/FireFlySpawner"]
position = Vector2(-608, -32)

[node name="Spawn2" type="Marker2D" parent="Spawners/FireFlySpawner"]
position = Vector2(-608, -160)

[node name="Spawn3" type="Marker2D" parent="Spawners/FireFlySpawner"]
position = Vector2(608, -160)

[node name="Spawn4" type="Marker2D" parent="Spawners/FireFlySpawner"]
position = Vector2(608, -32)

[node name="BirdSpawner" type="Node2D" parent="Spawners"]
position = Vector2(0, -512)
script = ExtResource("10_hknvp")
birdEntity = ExtResource("11_344x6")

[node name="RacoonSpawner" type="Node2D" parent="Spawners"]
position = Vector2(-6, -192)
script = ExtResource("12_thxep")
racoonEntity = ExtResource("13_yfgj2")

[node name="Spawn" type="Marker2D" parent="Spawners/RacoonSpawner"]
position = Vector2(-626, 64)

[node name="Spawn2" type="Marker2D" parent="Spawners/RacoonSpawner"]
position = Vector2(638, 64)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Ui" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_7vces")

[node name="HealthSlider" type="HSlider" parent="UI/Ui"]
layout_mode = 0
offset_left = 952.0
offset_top = 40.0
offset_right = 1108.0
offset_bottom = 56.0
scale = Vector2(-2, -2)
theme_override_icons/grabber = ExtResource("24_mja3x")
theme_override_icons/grabber_highlight = ExtResource("25_pf6ng")
theme_override_icons/grabber_disabled = ExtResource("26_0up7d")
theme_override_styles/slider = ExtResource("27_wo0cx")
theme_override_styles/grabber_area = ExtResource("28_c726p")
theme_override_styles/grabber_area_highlight = ExtResource("28_c726p")
value = 100.0
editable = false
scrollable = false

[node name="Scorelabel" type="Label" parent="UI/Ui"]
layout_mode = 0
offset_left = 8.0
offset_right = 229.0
offset_bottom = 31.0
text = "SCORE:000000"
label_settings = SubResource("LabelSettings_4vggm")

[node name="PauseMenu" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_d4ex4")

[node name="Menu" type="NinePatchRect" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -481.0
offset_top = -270.0
offset_right = 479.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("29_22odk")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Label" type="Label" parent="UI/PauseMenu/Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_top = 53.0
offset_right = 120.0
offset_bottom = 114.0
grow_horizontal = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_jx4ok")

[node name="Button" type="Button" parent="UI/PauseMenu/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -78.0
offset_right = 94.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = ExtResource("30_utosb")
theme_override_styles/hover = ExtResource("31_63k1t")
theme_override_styles/pressed = ExtResource("32_oedmx")
theme_override_styles/normal = ExtResource("33_8fugs")

[node name="Label" type="Label" parent="UI/PauseMenu/Menu/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -8.0
offset_right = 31.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"
label_settings = SubResource("LabelSettings_43og0")

[node name="Button2" type="Button" parent="UI/PauseMenu/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -14.0
offset_right = 94.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = ExtResource("30_utosb")
theme_override_styles/hover = ExtResource("31_63k1t")
theme_override_styles/pressed = ExtResource("32_oedmx")
theme_override_styles/normal = ExtResource("33_8fugs")

[node name="Label" type="Label" parent="UI/PauseMenu/Menu/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -8.0
offset_right = 37.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_exlt3")

[node name="Button3" type="Button" parent="UI/PauseMenu/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 50.0
offset_right = 94.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = ExtResource("30_utosb")
theme_override_styles/hover = ExtResource("31_63k1t")
theme_override_styles/pressed = ExtResource("32_oedmx")
theme_override_styles/normal = ExtResource("33_8fugs")

[node name="Label" type="Label" parent="UI/PauseMenu/Menu/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -8.0
offset_right = 23.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_7uybl")

[node name="OptionsPanel" type="NinePatchRect" parent="UI/PauseMenu"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_right = 958.0
offset_bottom = 540.0
texture = ExtResource("29_22odk")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Label" type="Label" parent="UI/PauseMenu/OptionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_right = 122.0
offset_bottom = 88.0
grow_horizontal = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_a01g6")

[node name="MusicSlider" type="HSlider" parent="UI/PauseMenu/OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -14.0
offset_right = -1.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_icons/grabber = ExtResource("24_mja3x")
theme_override_icons/grabber_highlight = ExtResource("25_pf6ng")
theme_override_icons/grabber_disabled = ExtResource("26_0up7d")
theme_override_styles/slider = ExtResource("27_wo0cx")
theme_override_styles/grabber_area = ExtResource("28_c726p")
theme_override_styles/grabber_area_highlight = ExtResource("28_c726p")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="UI/PauseMenu/OptionsPanel/MusicSlider"]
layout_mode = 0
offset_left = 72.5
offset_top = -16.0
offset_right = 124.5
text = "MUSIC"
label_settings = SubResource("LabelSettings_hynll")

[node name="MasterSlider" type="HSlider" parent="UI/PauseMenu/OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -134.0
offset_right = -1.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_icons/grabber = ExtResource("24_mja3x")
theme_override_icons/grabber_highlight = ExtResource("25_pf6ng")
theme_override_icons/grabber_disabled = ExtResource("26_0up7d")
theme_override_styles/slider = ExtResource("27_wo0cx")
theme_override_styles/grabber_area = ExtResource("28_c726p")
theme_override_styles/grabber_area_highlight = ExtResource("28_c726p")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="UI/PauseMenu/OptionsPanel/MasterSlider"]
layout_mode = 0
offset_left = 64.5
offset_top = -20.0
offset_right = 129.5
offset_bottom = -4.0
text = "MASTER"
label_settings = SubResource("LabelSettings_sl3lo")

[node name="SFXSlider" type="HSlider" parent="UI/PauseMenu/OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 98.0
offset_right = -1.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_icons/grabber = ExtResource("24_mja3x")
theme_override_icons/grabber_highlight = ExtResource("25_pf6ng")
theme_override_icons/grabber_disabled = ExtResource("26_0up7d")
theme_override_styles/slider = ExtResource("27_wo0cx")
theme_override_styles/grabber_area = ExtResource("28_c726p")
theme_override_styles/grabber_area_highlight = ExtResource("28_c726p")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="UI/PauseMenu/OptionsPanel/SFXSlider"]
layout_mode = 0
offset_left = 84.5
offset_top = -8.0
offset_right = 117.5
offset_bottom = 8.0
text = "SFX"
label_settings = SubResource("LabelSettings_r284u")

[node name="Button" type="Button" parent="UI/PauseMenu/OptionsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -60.0
offset_right = 87.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/disabled = ExtResource("30_utosb")
theme_override_styles/hover = ExtResource("31_63k1t")
theme_override_styles/pressed = ExtResource("32_oedmx")
theme_override_styles/normal = ExtResource("33_8fugs")

[node name="Label" type="Label" parent="UI/PauseMenu/OptionsPanel/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -8.0
offset_right = 21.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = SubResource("LabelSettings_eorwb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5bx81")

[connection signal="body_entered" from="Stage/Destroyer" to="Stage/Destroyer" method="_Body_Entered"]
[connection signal="body_entered" from="Stage/Destroyer2" to="Stage/Destroyer2" method="_Body_Entered"]
[connection signal="body_entered" from="Stage/Destroyer3" to="Stage/Destroyer3" method="_Body_Entered"]
[connection signal="pressed" from="UI/PauseMenu/Menu/Button" to="UI/PauseMenu" method="_Resume"]
[connection signal="pressed" from="UI/PauseMenu/Menu/Button2" to="UI/PauseMenu" method="_Options"]
[connection signal="pressed" from="UI/PauseMenu/Menu/Button3" to="UI/PauseMenu" method="_Quit"]
[connection signal="value_changed" from="UI/PauseMenu/OptionsPanel/MusicSlider" to="UI/PauseMenu" method="_on_Music_value_changed"]
[connection signal="value_changed" from="UI/PauseMenu/OptionsPanel/MasterSlider" to="UI/PauseMenu" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/PauseMenu/OptionsPanel/SFXSlider" to="UI/PauseMenu" method="_on_SFX_value_changed"]
[connection signal="pressed" from="UI/PauseMenu/OptionsPanel/Button" to="UI/PauseMenu" method="_Options_Back"]
